# llm-conditional-forget-de5d

./: README.md  REPORT.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml
data/: conditional_forgetting.csv
logs/: research_prompt.txt  session_instructions.txt
research_workspace/: data_gen.py  evaluation.py  prompting.py
results/: config.json  metrics.json  metrics_table.csv  responses.csv
scripts/: run_experiments.py
